docs/데이터파트/version4.0/데이터_품질_규약.md
# 데이터 품질 규약 — 이상치 · 결측 · 자본변동 · 편향

> 작성 2026-09-04 · 이동원 · **전량 실측 + 수업 자료 + 외부 관행 조사**
> 대상: 팀원 4인. 특히 피처(신장환)·모델(오준영)·백테스팅(강민석) 파트가 **무엇을 믿고
> 무엇을 의심해야 하는지** 알기 위한 문서입니다.

---

## 0. 한 줄

**우리 자료는 결측이 거의 없고 편향도 없지만, 수정주가가 감자 17자리를 못 이었습니다.**
그 17자리는 지금 유니버스에 안 들지만, 유니버스를 239위까지 넓히거나 전 종목으로
피처를 만들면 걸립니다.

🆕 **v3.9 (2026-09-07)**: 이상치 판별자를 **크기에서 어긋남으로** 바꿨습니다(§4.4). `|수익률| > 100%`
필터는 진짜 사건 1건을 지우고 오류는 못 잡았습니다. 이제 `supply.adj_quality` 가 KRX 등락률과
1%p 넘게 어긋난 행만 `is_adj_suspect` 로 표시하고, 실제 극단 사건은 `is_extreme_return` 으로
남깁니다. 그 어긋남을 좇다가 **재개일 규칙이 인적분할·회생 재상장에 감자 규칙을 적용**하던 것을
찾아 고쳤습니다(§6.7 · 51종 재생성 · PR #156).

---

## 1. 이 문서를 쓰게 된 이유 — 오늘 두 번 틀렸습니다

| 무엇 | 적어 둔 값 | 전량 실측 | 왜 틀렸나 |
|---|---:|---:|---|
| 이름으로 우선주를 추측할 때 어긋나는 종목 | 7종 | **10종 · 10,190행** | 세 날짜만 봤다 |
| 수정주가가 못 이은 자리 | 0 (v9 완료 보고) | **17자리** | 액면가가 바뀐 것만 봤다 |

두 실수의 모양이 같습니다. **한 축을 전량으로 봐도 다른 축이 표본이면 그건 여전히
표본입니다.** 20260831 유가 943종을 전수로 세도 우선주 어긋남은 0건이었습니다.
날짜를 안 넓혔기 때문입니다.

---

## 2. 수업이 말한 것 — 09단원 1장 · 02단원 4장

강사님 자료가 금융 데이터의 함정을 **세 가지**로 듭니다
(`learning/09-finance-ml-dl/1.금융머신러닝.ipynb`).

### 2.1 룩어헤드 편향 (Look-ahead Bias)

> 백테스팅할 때 그 시점에서는 알 수 없었던 미래 정보를 활용해서 성과가 비현실적으로
> 좋게 나오는 오류
>
> - 1분기 실적(3월 31일까지)을 4월 1일부터 반영 → 실제 발표는 4~5월
> - **당일 종가로 당일 매매** → 종가는 장 마감 후 확정되므로 **다음 거래일**에 매매

### 2.2 생존 편향 (Survivorship Bias)

> 상장폐지·인수합병으로 사라진 회사를 **포함해서** 테스트해야 한다.
> 2015년 코스피 종목으로 테스트해야 하는데 지금 남아 있는 종목만 쓰면 그 사이
> 상장폐지된 부실기업이 전부 빠져 결과가 부풀려진다.

### 2.3 통화 기준

원화·달러 기준을 섞지 않는다. 환율에도 룩어헤드·정상성 문제가 있다.

### 2.4 결측치 — 시계열 특성을 고려한 보간

> 시계열 데이터의 추세·계절성을 반영한 보간법 고려 (예: ARIMA 기반)

일반 전처리(`02-preprocessing/4`)는 `dropna` · `fillna` · `replace` 로 결측을 다루고,
**NaN 이 아닌 `0`·`"-"`·`"?"` 로 들어온 결측**을 `np.nan` 으로 바꾸라고 합니다.

### 2.5 🔴 수업에 **없는** 것 — 이상치 처리

`2.금융데이터전처리.ipynb` 는 결측을 `isnull().sum()` 으로 세는 데서 멈춥니다.
윈저화·트리밍·MAD 같은 이상치 처리가 나오지 않습니다. **그래서 §4 를 외부 관행으로
채웠습니다.**

---

## 3. 우리 자료 실측 — 무엇을 지키고 있나

`daily_price` 9,223,644행 전수 (2026-09-04).

| 수업이 말한 것 | 우리 실측 | 판정 |
|---|---|---|
| 생존 편향을 피한다 | 전 구간 3,677종 중 **912종(24.8%)이 지금은 없는 종목** | ✅ 남아 있다 |
| 종가는 다음 거래일에 쓴다 | `stock_base_info`·`stock_identity`·`corp_profile`·`macro_series` 에 `known_at` | ✅ |
| 결측을 정직하게 다룬다 | 원가격 4칸 결측 **0** · `adj_open/high/low` 결측 3.08% | ✅ (아래 §5) |
| OHLC 정합 | `high<low` 등 위반 **0행** (수정주가 포함) | ✅ |

### 3.1 🔴 `daily_price` 에는 시점 칸이 없습니다

`known_at` 이 있는 표는 넷이고 시세 표에는 없습니다. 이건 **결함이 아니라 설계**입니다 —
시세의 시점 규칙은 *"그날 종가는 그날 장 마감 뒤"* 하나뿐이라 행마다 적을 것이 없습니다.
대신 그 규칙은 **`supply/` 층의 정문 함수가 강제**합니다.

다만 **`supply/` 를 거치지 않고 `daily_price` 를 직접 읽으면 아무것도 막아 주지
않습니다.** 팀원이 SQL 로 바로 읽을 때는 스스로 `bas_dd < 예측일` 을 지켜야 합니다.

---

## 4. 이상치 — 수업에 없어서 외부 관행으로 채웁니다

### 4.1 조사한 것

| 방법 | 흔한 임계값 | 어디서 쓰나 |
|---|---|---|
| 윈저화 (winsorize) | **5/95 백분위** (펀더멘털) · 1/99 (연구) | MSCI Quality 지수 방법론 · 팩터 구성 |
| MAD 수정 z-점수 | `0.6745·(x−중앙값)/MAD`, **\|z\|>3** | 두꺼운 꼬리에 강건 |
| 3-시그마 절단 | ±3σ | Barra USE4 — **자료 오류 제거** 단계 |
| 순위화 (rank) | — | 횡단면 팩터 구성의 기본 |

출처: MSCI Quality Index Methodology · Barra USE4 Methodology Notes(2011) ·
scipy `mstats.winsorize` · zipline `pipeline.factors` · Lopez de Prado,
*Advances in Financial Machine Learning*.

### 4.2 🔴 그런데 우리는 가격을 자르지 않습니다

윈저화는 **횡단면 팩터**에 씁니다 — 같은 날 여러 종목의 값을 나란히 놓고 꼬리를
자르는 것입니다. 우리 `daily_price` 는 **원자료**라 자르면 안 됩니다. 이유 셋:

1. **잘린 값은 되돌릴 수 없습니다.** 원자료를 고치면 나중에 "진짜였다"는 것을 알아도
   복원할 방법이 없습니다.
2. **극단이 대부분 진짜입니다.** 아래 §4.3 이 그 증거입니다.
3. **자르면 결함이 숨습니다.** 감자 미조정 17자리는 극단이라서 눈에 띄었습니다.
   미리 잘라 두었다면 영영 못 찾았을 것입니다.

**그래서 우리 규약은 이렇습니다.**

| 층 | 이상치를 어떻게 하나 |
|---|---|
| 수집 (`ingest/`) | **아무것도 자르지 않는다.** 받은 그대로 담는다 |
| 검사 (`scripts/verify_*`) | 극단을 **세고 원인으로 가른다.** 설명 안 되면 붉게 띄운다 |
| 공급 (`supply/`) | 설명 안 되는 날에 **표시(flag)를 붙여** 내보낸다 |
| 피처 (`features/`) | 여기서 자른다 — **수익률·피처 단계**, 횡단면 윈저화 |

### 4.3 실측 — 극단은 대부분 진짜입니다

수정주가 기준 하루 변화가 ±100% 를 넘는 행을 독립 근거로 갈랐습니다.

| 원인 | v3.3 (09-04 오전) | **v3.5 (09-04 저녁)** | 근거 |
|---|---:|---:|---|
| 정리매매 | — | 32 | 체결이 끊기기 직전 10체결일 |
| 거래정지 재개 | 20 | 6 | 직전 행이 zero-OHLC |
| 정리매매 + 정지재개 | — | 18 | 둘 다 |
| 자본변동(+정지재개) | 44 | 28 | 그날 `list_shrs` 가 바뀌었다 |
| 종목의 첫 행 | 0 | 0 | 첫 행에는 극단이 없다 (수집 경계는 상장이 아니다) |
| 🔴 아직 설명 안 됨 | **32** | **0** ✅ | |
| 합계 | 96 | **84** | |

**32행이 0행이 됐습니다.** 두 가지가 함께 작용했습니다 — 감자 보정이 대부분을 닫았고,
그 보정을 정본 코드로 옮기며 찾은 결함 한 행이 마지막을 닫았습니다
([v3.5 변경사항 §3](변경사항.md)). 판정은 `common/corporate_actions.py` 의 분류기를
**수정주가 축**에 붙여 냈고, 재현은 [노트북 06/06](../../../notebooks/06-검토·발견/06.스크래치로-고친-것은-고쳐진-것이-아니다.ipynb) §4 입니다.

⚠️ 남은 84행은 **이상치가 아니라 설명된 사건**입니다. 정리매매·거래정지 재개·자본변동은
실제로 그만큼 움직인 날입니다. 학습에서 덜어낼지는 피처 층의 판단이고, 수집 층은 자르지
않습니다(§4.2). (v3.7 에서 84 → **83 = 개발 76 + 홀드아웃 7** 로 구간을 갈라 적었습니다.)

### 4.4 🆕 크기가 아니라 어긋남으로 가른다 — `supply.adj_quality` (2026-09-07 · v3.9)

§4.2 가 "공급 층은 **표시**를 붙여 내보낸다" 고 적어 두고 실제 표시가 없었습니다. 그 사이에
모델 파트가 개별종목 후보군에 `|adj_close 일간수익률| > 100%` 필터를 걸었고(#132), 그것이
**딱 한 행**을 지웠습니다 — 경남에너지(008020) 2016-05-11, +153.66%. 그런데 KRX 가 그날 발표한
등락률도 정확히 +153.66% 였습니다. 오류가 아니라 **실제로 그렇게 움직인 날**입니다. 반대로
신세계(004170) 2011-06-10 은 우리 수정주가 수익률이 −60.6% 인데 KRX 등락률은 +14.95% 입니다 —
인적분할 재상장일에 우리 조정계수가 틀린 것이고, **크기 필터에는 걸리지 않습니다.**

"이상치" 라는 말이 **데이터 오류**와 **진짜 사건**을 섞습니다. 진짜 사건을 지우면 모멘텀 계열
라벨이 배워야 할 표본이 빠지고(극단값 제거가 극단 추세 종목 풀을 고갈시킨다는 지적 · #132),
오류를 남기면 없는 −60% 가 학습됩니다. 그래서 판별자를 **크기**에서 **독립 원천과의 어긋남**으로
바꿨습니다. KRX `change_rate` 는 거래소가 그날 기준가 대비로 낸 공식 수익률이라, 우리가 만든
수정주가를 검증할 **독립 원천**입니다. "수정가에서 계산한 수익률은 보고된 수익률과 맞아야 한다"
는 시장 데이터의 기본 불변식이고, `build_adj_prices.verify()` ① 이 같은 식을 집계로 검사합니다.

| 칸 | 정의 | 단위 |
|---|---|---|
| `adj_return_1d` | (`adj_close` / 전일 `adj_close` − 1) × 100 | % |
| `adj_change_rate_gap` | \|`adj_return_1d` − `change_rate`\| | %p |
| `is_adj_suspect` | gap > `SUSPECT_GAP_TOLERANCE`(**1%p**) → 수정주가 오류 의심 · **학습에서 뺀다** | bool |
| `is_extreme_return` | \|`adj_return_1d`\| > `EXTREME_RETURN_PCT`(**30%**) 이고 의심이 아님 → 진짜 극단 사건 · **남긴다** | bool |

비교할 수 없는 행(종목의 첫 행 · 전일 adj 가 없거나 0 · 종가 0 · 등락률 없음)은 수익률·갭이 NaN 이고
두 플래그는 False 입니다 — **모르는 것을 오류로 치지 않습니다.** T−1 과 T 만 쓰므로 학습·예측
경로에 같은 함수를 씁니다(시점 규칙). 시험 16건.

**허용폭 1%p 의 근거** — 0.15~1.0%p 사이 12,271행의 **94% 가 종가 5,000원 미만**이었습니다.
저가주의 1원 눈금이 만드는 반올림 차이라, 그 띠를 의심으로 치면 오경보만 늡니다. `verify()` 의
집계 허용폭 0.15 는 그대로 둡니다 — 집계와 행 판정은 다른 물음입니다.

| 실측 (전 시장 개발구간 7,885,483쌍) | 고치기 전 | **고친 뒤** |
|---|---:|---:|
| 의심 행 (gap > 1%p) | 1,406 | **1,353** (chain 119 · fdr 1,234) |
| 극단(\|r\| > 30%) 중 의심 | 149 | **103** |
| 후보군(업종 10 × 종목 5 · 176,705행) 의심 행 | 2 | **0** |
| `verify()` ① (재생성 51종 200,035쌍) | 52쌍 어긋남 | **0쌍** |

"고친 뒤" 가 무엇을 고친 것인지는 §6.7 입니다. 재현은
[노트북 06/10](../../../notebooks/06-검토·발견/10.이상치는-크기가-아니라-어긋남으로-가른다.ipynb).

⚠️ 이 칸 넷은 **HF 반출본에 없습니다.** 공급 층(`supply/`)에서 붙이므로, HF 로 받아 쓰는 팀원은
같은 함수를 돌려야 같은 표본이 됩니다. 그것을 게이트가 표로 내어 카드에 게시하자는 것이
[품질 원장 설계](데이터_품질_원장_설계.md)입니다(구현은 다음).

---

## 5. 결측 — 0 과 NaN 은 다릅니다

### 5.1 실측

| 칸 | 결측 | 0 인 행 | 뜻 |
|---|---:|---:|---|
| `open`·`high`·`low` | 0 | **284,107 (3.08%)** | 체결이 없던 날 (거래정지) |
| `close` | 0 | 0 | 정지 중에도 잔존종가가 있다 |
| `volume` | 0 | 283,982 (3.08%) | 거래 없음 |
| `adj_open`·`adj_high`·`adj_low` | **284,107 (3.08%)** | — | 원가격이 0 이라 배율을 못 곱한다 |
| `adj_close` | 0 | 0 | — |

**같은 3.08% 가 원가격에서는 `0`, 수정주가에서는 `NaN` 입니다.** 이건 의도된 것입니다 —
`0` 은 KRX 가 준 그대로이고, `NaN` 은 *"이 날은 값이 없다"* 를 우리가 밝힌 것입니다.

### 5.2 🔴 팀원이 지켜야 할 것

```python
# 이러면 안 됩니다 — "그 날 0원" 이 됩니다
df["adj_open"].fillna(0)

# NaN 은 참입니다. 빈 값 판정은 pd.isna 로
if pd.isna(x): ...           # ✅
if not x: ...                # ❌ NaN 은 False 가 아닙니다
```

앞으로 채우기(forward-fill)를 쓸 거라면 **거래정지·상장폐지를 넘어 채우지 않도록**
`limit` 을 두어야 합니다. 정지 구간을 직전 가격으로 메우면 그 기간 변동성이 0 이 되고,
정지가 풀린 날 점프가 통째로 하루에 몰립니다.

> 신장환님이 `features/indicators.py` 의 RSI 결측 델타를 **`nan` 으로 정직하게 전파**하도록
> 고치셨습니다(PR #81). 그 방향이 이 규약과 같습니다.

---

## 6. 🔴 자본변동 — FinanceDataReader 가 감자를 조정하지 않습니다

### 6.1 실측

상장주식수가 **2배 이상** 변한 자리 2,048곳을 전수로 봤습니다.

| 갈래 | 자리 |
|---|---:|
| 가격이 안 튀었다 — 증자·전환 등이라 조정이 필요 없다 | 984 |
| 가격이 튀었고 수정주가가 이었다 | 1,047 |
| 🔴 **가격이 튀었는데 수정주가가 못 이었다** | **17** |

못 이은 17자리는 보통주 13 · 우선주 4 이고, **개발구간 안이 11**입니다.
- 출처는 **전부 `fdr`** — 우리 계산(`chain`)이 아니라 FinanceDataReader 가 준 값입니다

| 종목 | 날짜 | 주식수 | adj 가 뛴 배수 |
|---|---|---|---:|
| 017170 훈영 | 20110404 | 53,406,538 → 2,670,326 | **20.00배** |
| 078860 아이오케이 | 20231227 | 96,126,472 → 4,806,323 | 19.71배 |
| 007460 에이프로젠 | 20260508 | 329,305,030 → 21,953,668 | 15.46배 |
| 139050 시티랩스 | 20230628 | 106,494,006 → 7,862,472 | 15.42배 |
| 079970 투비소프트 | 20240821 | 92,905,003 → 9,290,500 | 8.39배 |

(전체 17건은 `python scripts/verify_base_info.py` 가 매번 찍습니다.)

### 6.2 왜 놓쳤나 — 액면가로 판정했기 때문입니다

**액면분할·병합은 액면가가 같이 바뀝니다.** 10:1 병합이면 액면가 500원 → 5,000원.
그래서 액면가를 대조하면 잡힙니다.

**그런데 감자는 액면가가 그대로입니다.** 주식수만 줄고 액면가는 유지됩니다.
실제 기사도 그렇게 씁니다 — *"보통주 10주를 **동일 액면가**의 1주로 병합하는 무상감자"*
(케이피엠테크, 2026-08). 우리가 찾은 042040 케이피엠테크 20260626 건과 같은 사건입니다.

처음 만든 검사는 이 축을 안 봤습니다. 219건이 전부 "설명 안 됨"으로 쏟아졌고
그 안에 진짜 결함이 묻혔습니다.

### 6.3 FDR 의 공식 입장과 실측이 다릅니다

> *"FinanceDataReader 에서 가져오는 모든 가격 데이터는 수정 주가(Adjusted Price)입니다.
> 따라서 종가(Close) 역시 수정종가(Adjusted Close) 입니다."*
> — FinanceDataReader Issue #21

**이 문장을 그대로 믿으면 안 됩니다.** 우리 실측에서 17자리가 원가격과 똑같이 뛰었습니다.
라이브러리 문서를 근거로 삼지 말고 **자기 자료로 재야 합니다.**

### 6.4 🔴 이 문제는 앞으로 커집니다

| 무엇 | 수치 | 출처 |
|---|---:|---|
| 2026년 액면병합 | **276건** | KRX 집계 (2026-08-26) |
| 2026-02 상장폐지 개혁 이후 7월 중순까지 주식병합 | **256건** | 작년 같은 기간 **10건**의 20배 |
| 병합 이후 주가가 오히려 내린 기업 비율 | 83% | 같은 집계 |

주가 1,000원 미만이 30거래일 이어지면 관리종목이 되는 제도가 2026-07 시행됐고,
동전주들이 병합·감자로 대응하고 있습니다. **최근 구간일수록 미조정 위험이 큽니다.**

### 6.5 지금 영향 범위

| 물음 | 답 |
|---|---|
| 유니버스(시장별 시총 상위 50)에 드나 | **0건** |
| 보통주 중 가장 높은 순위 | 176440 에이치엔티 **239위** (KOSDAQ) |
| 언제부터 걸리나 | 유니버스를 **상위 239위**까지 넓히면 |
| 전 종목으로 피처를 만들면 | **지금도 걸립니다** |

### 6.6 🆕 관문이 셋이 됐습니다 (2026-09-05 · v3.6)

전 종목 3,677종으로 넓히자 관문 둘이 못 막는 자리가 나왔습니다 — **인적분할을 감자로
오인**해 과거 803행을 1.567배로 부풀린 자리입니다(삼양제넥스 003940 · 2013-03-25).

| 관문 | 무엇을 묻나 | 임계 |
|---|---|---|
| ① | 원가격이 계수만큼 실제로 튀었나 | `CA_PRICE_TOLERANCE` 0.30 |
| ② | FDR 이 그것을 안 폈나 | `CA_SCALE_TOLERANCE` 0.10 |
| 🆕 ③ | **FDR 이 이미 KRX 기준가만큼 폈나** | `CA_BASIS_TOLERANCE` 0.10 |

③이 필요한 이유는 **KRX 가 조정한 폭 자체가 작은 사건**이 있기 때문입니다. 인적분할은
주식수가 줄어도 가격이 거의 안 움직여서, FDR 이 제대로 폈는데도 ②의 창(±0.10) 안에
들어옵니다.

**결정적 증거**는 FDR 이 정지일에 주는 값이었습니다.

```
20130322  원문 종가 68,900 → FDR 70,500      ← KRX 기준가를 준다
FDR 이 편 폭  1.023222
KRX 기준가비  1.023222                        ← 여섯 자리까지 같다
```

FDR 은 사건을 알고 KRX 기준가만큼 정확히 폈습니다. **틀린 것은 FDR 도 관문도 아니라 우리
계수**였습니다 — 재개일이라 상장주식수 배율에서 얻는데, 인적분할에는 그 값이 안 맞습니다.

#### 임계는 재고 나서 적었습니다

발동한 **22자리 전부**에서 세 후보 지표를 쟀습니다.

| 지표 | 오검출 자리 | 가장 가까운 정상 자리 | 판정 |
|---|---:|---:|---|
| ① `\|보정후\|` | 0.2774 | 0.2831 | 🔴 **못 가른다** — 정상 쪽이 더 의심스럽다 |
| ② `\|보정후 − KRX\|` | 0.3838 | 0.2831 | 여유 1.36배 — 조이면 진짜 감자를 잃는다 |
| ③ `\|실제 ÷ 기준가비 − 1\|` | **0.0000** | **0.5000** | ✅ **틈이 비었다** |

임계를 낮은 쪽(0.10)에 붙였습니다. **조정을 놓치면 수익률이 틀리지만, 없는 조정을 만들면
멀쩡한 과거 전체를 망칩니다.**

⚠️ `기준가비 != 1` 조건이 함께 필요합니다 — **감자인데 KRX 등락률이 `0.00%` 인 자리가
실재**합니다(참엔지니어링 2026-05-11). 그 조건이 없으면 진짜 감자를 놓칩니다.

#### 남는 한계

- **자본변동 당일 하루는 여전히 부정확합니다.** 다음날부터는 정확합니다.
- **FDR 이 조정을 하루 일찍 놓는 자리**가 둘 있습니다(티이엠씨 2023-12-28 ·
  폰드그룹 2025-12-30). 우리가 만든 것이 아니라 FDR 원값의 성질입니다.

#### `verify_base_info` §9 임계는 2배를 유지합니다

1.5배로 내릴지 검토했는데, 계수가 `1.5~2.0`(또는 그 역수) 구간인 발동 자리가 **삼양제넥스
하나이고 그것이 감자가 아닙니다.** 내리면 오경보만 하나 늘어납니다.

### 6.7 🆕 재개일 규칙 — 인적분할·회생 재상장은 감자가 아니다 (2026-09-07 · v3.9)

§4.4 의 어긋남을 좇아가니 원인은 관문이 아니라 **재개일 규칙**이었습니다. 재개일(직전 행이
거래정지)에 상장주식수가 바뀌면 "주식수 배율 = 가격 배율" 로 계수를 만들고 있었는데, 그 등식은
액면분할·병합·감자에서만 성립합니다. 인적분할은 주식수가 줄어도 가격이 **시장이 매긴 만큼만**
움직이고, 회생 재상장은 감자 배율과 별개로 KRX 가 기준가를 **새로** 정합니다.

재개일에 주식수가 바뀐 **1,305건**에 새 규칙을 돌리니 계수가 달라지는 사건이 223건이었고, 그중
FDR 구간 171건은 FDR 이 이미 기준가만큼 펴 놓아 우리 값과 무관했습니다. **chain 구간 52건(51종목)**
이 실제로 우리 값을 정하고 있었고, 52건을 DART 공시 제목으로 하나씩 확인했습니다.

| 갈래 | 건수 | 공시 | 옛 규칙이 만든 수익률 | KRX 등락률 |
|---|---:|---|---|---|
| ① 인적분할·지주전환 | 24 (공시 확인 21 · 2010년 초라 공시 창 밖 3) | `회사분할결정` · `증권신고서(분할)` | −22 ~ −92% | ±15% 안 |
| ② 회생·합병 + 감자(출자전환) | 28 | `회생계획인가` + `감자결정` · `합병결정` + `감자완료` | +28 ~ **+4,900%** | ±15% 안 |

남광토건 2013-02-15 는 회생 감자 2.67:1 에 기준가가 전일종가의 40배라, 배율 2.67 만 쓰면 나머지
15배가 **+1,172% 가짜 수익률**로 남아 있었습니다. 엘컴텍은 +4,895% 였습니다.

**표준과 대조** — 인적분할은 CRSP·Xignite·Daloopa 셋 다 "빠져나간 가치만큼 과거가를 축소" 하는
배당형 조정이고 그 가치는 시장이 매긴 값입니다. 회생 재상장은 CRSP 가 새 시리즈(new PERMNO)로
끊어 **정지 구간을 가로지르는 수익률을 만들지 않습니다.** KRX 는 두 경우 모두 평가가격을 정하고
호가 범위(분할·합병 재상장 50~200% · 감자 50~150%) 안에서 시초가를 잡아 그것을 **기준가**로
삼습니다(유가증권시장 업무규정 시행세칙). 그래서 **기준가 / 전일종가**를 계수로 쓰면 ①은 CRSP
방식과 같아지고, ②는 정지 구간의 수익률이 0 이 되어 CRSP 의 "끊기" 와 같은 효과가 납니다.

**고친 규칙** — `common/corporate_actions.adjustment_factor`. 재개일이고 상장주식수가 10% 넘게 바뀐 날:

| | 조건 | 계수 | 건수 |
|---|---|---|---:|
| ㉠ | 기준가가 배율의 50~150% 안 (`RESUME_BASIS_BAND`) | **정확한 유리수 배율** (삼성전자 50:1 · 감자 5:1 — 전과 같음) | 1,026 |
| ㉡ | 그 밖 | **기준가 / 전일종가** | 223 (chain 52) |
| ㉢ | 변동이 1.1~1.5배로 작음 (`RESUME_SHARE_CHANGE_MIN`) | 감자는 실측에서 전부 2배 이상이라 분할·합병으로 보고 기준가 | (㉡에 포함) |

변동 10% 미만은 전처럼 조정하지 않습니다 — 정지 중 시장 재평가는 수익률입니다. ㉡ 은 태영건설
2024-07-22 출자전환(주식수 ×24.9 · 등락률 0.00%)처럼 옛 규칙이 chain 구간에서 1/24.9 를 만들
자리도 계수 1 로 바로잡습니다.

**재생성은 51종목만** `--codes` 로 했습니다. 전 종목을 돌리면 FDR 창이 밀려 옛 행이 열화되는데
(§6.4 · [노트북 06/08](../../../notebooks/06-검토·발견/08.최신으로-맞추는-것이-자료를-나쁘게-만들-때가-있다.ipynb)),
바뀌는 종목은 코드로 전수 측정해 이미 알고 있었습니다. 🔴 처음 잰 재생성 대상은 38종목이었는데
코드에는 ㉢ 가지가 하나 더 있었고, `adjustment_factor` 자체를 1,305건에 돌려 세니 13종목이 더
나왔습니다 — **영향 범위는 구현한 코드로 셉니다.**

| | 전 | 후 |
|---|---:|---:|
| 52 사건일의 gap (1%p 초과) | 52 | **0** (최대 0.0000%p) |
| 값이 바뀐 행 | — | 39,166 (51종목 chain 구간) |
| FDR 창 밀림 (fdr → chain) | — | 49행 |
| `verify()` ① (51종목 200,035쌍) | 52쌍 어긋남 | **0쌍** |
| HF 재배포 | — | 09-07 오후 `run_id 20260907-134654` (첫 시도는 검증기가 막았다 · 종목기본정보 6쌍을 받고 다시) |

#### 남는 것

- **FDR 구간 의심 1,234행**은 FDR 이 KRX 와 다르게 편 자리(권리락 계수 등)로 보입니다. 후보군에는
  0행이라 모델에는 안 걸리지만 다음 실측 거리입니다. chain 119행도 함께.
- 자본변동 **당일 하루**·FDR 이 하루 일찍 놓는 2종은 그대로입니다(§6.6).

---

## 7. 앞으로 지킬 것 — 규약 다섯

### 7.1 반출 전에 검증기를 전수로 돌린다 · 원장은 막지 않고 적는다

HF 업로드 스크립트가 `verify_*` 를 먼저 돌리고, **하나라도 붉으면 올리지 않습니다.**
"고쳤다"와 "나갔다"는 다릅니다 — 2026-09-03 에 이미 한 번 겪었습니다.

🆕 **막는 것과 적는 것을 갈랐습니다**(v4.0 · D-64).

| | 무엇이 하나 | 붉으면 |
|---|---|---|
| **막는다** | 홀드아웃 누수 검사 · 검증기 4종 · private 재확인 | 한 파일도 안 올라간다 |
| **적는다** | `QUALITY_LEDGER.json` 5축 17지표 | **그대로 올라가고 카드에 붉게 적힌다** |

원장이 막지 않는 이유는, 막으면 **알면서 내보내는 것을 숨기게** 되기 때문입니다.
`chain` 구간 117행이 KRX 와 어긋나는 것은 오늘 고칠 수 있는 것이 아닙니다. 그것을
이유로 반출을 멈추면 아무도 자료를 못 받고, 몰래 넘기면 팀원이 모르고 씁니다.
**붉은 채로 내보내되 붉다고 적습니다.**

원장은 `reports/quality_ledger.jsonl` 에 **한 줄씩 쌓입니다**(append-only). 다음 반출본이
"지난번과 무엇이 달라졌나" 를 그 줄에서 읽어 카드에 적습니다.

### 7.2 공급 층의 판정은 **반출본 칸으로 내보낸다**

🆕 v4.0 신설. 공급 층에서만 붙는 판정은 **HF 에서 받아 쓰는 팀원에게 없는 것과 같습니다.**
각자 같은 함수를 다시 돌려야 같은 표본이 되는데, **칸 구성만 보고는 자기가 팀 기준선과
다른 표본을 쓰고 있다는 것을 눈치챌 수 없습니다**(#168 · 신장환 님).

| 판정 | 반출본에 | |
|---|---|---|
| 업종 4칸 | ✅ | |
| 수정주가 품질 4칸 | ✅ | 2026-09-08 |
| 주권종류 · 증권그룹 · 소속부 | ❌ | 모델 파트가 **이름 규칙 + 감사 예외 10건**으로 재구성 중 |
| 정리매매 · 거래정지 · 신규상장 | ❌ | 큰 벌에 **3.063%** 그대로 |

🔴 **작은 벌과 큰 벌이 다른 규칙 위에 서면 안 됩니다.** 지금은 작은 벌만
`supply.training.training_frame` 이 걸러 주는데(89,424 → 82,852행), 카드는 큰 벌을
"최종 학습용은 이것" 이라 부릅니다. 어느 쪽이든 **파일에 표시가 있어야** 받는 사람이
고를 수 있습니다. → [퀀트기준_대조 §3.5](퀀트기준_대조.md)

### 7.3 이름만 보고 거르지 못하게, 뜻을 파일과 카드 양쪽에 적는다

`is_extreme_return` 은 이름이 *"극단값이니 빼라"* 로 읽히지만 실제로는
**"진짜 사건이니 남겨라"** 입니다. 그래서 세 겹으로 적습니다 — 복사해 쓸 한 줄
(`df = df[~df["is_adj_suspect"]]`) · 칸 표의 뜻 · `FLAG_GUIDE` 절.

🆕 그리고 **같은 성질을 가진 칸에는 같은 경고를 답니다.** `change_rate` 와
`adj_return_1d` 은 같은 한 행(008080 · 2013-09-11 · 6,699,900%)을 담고 있는데
경고가 한쪽에만 있었습니다(PR #184). 경고는 칸 **이름**으로 걸리므로, 새 칸을 실을 때
**같은 사건이 그 칸에도 들어가는지** 봅니다.

### 7.4 알면서 미룬 것을 한 장에 모은다

이 문서 §8 이 그 자리입니다. HF 데이터셋 카드에도 같은 절을 넣어, 팀원이 저장소를
안 봐도 결함을 알 수 있게 합니다.

### 7.5 축이 둘이면 표본도 둘로 넓힌다

검사를 쓸 때마다 **"이 검사가 안 보는 축은 무엇인가"** 를 주석으로 적습니다.
오늘 두 번 다 그 질문을 안 해서 틀렸습니다.

---

## 8. 알면서 아직 못 고친 것

| 무엇 | 크기 | 영향 | 언제 |
|---|---|---|---|
| ~~🔴 감자 미조정~~ · ~~보정 코드가 정본에 없다~~ | **닫힘** (v3.5) | `scale_series` ⑤ 로 정본화 · 시험 10건 · 16종 재빌드 · 못 편 자리 0/17 | ✅ |
| ~~극단 중 설명 안 된 것~~ | **닫힘** (v3.5) | 32행 → **0행** (§4.3) | ✅ |
| ~~전 종목 재빌드 · HF 재배포~~ | **닫힘** (v3.6) | 3,677종 · 관문 ③ · 12파일 404MB | ✅ |
| ~~`verify_base_info` §9 임계 2배~~ | **유지로 확정** (v3.6) | 1.5~2.0 구간의 유일한 자리(삼양제넥스)가 감자가 아니었다 | ✅ |
| ~~재개일 규칙이 인적분할·회생을 감자로 읽는다~~ | **닫힘** (v3.9 · §6.7) | chain 52건 51종목 · 재생성 · gap 0 | ✅ |
| 🆕 FDR 구간 의심 행 | **1,234행** (전 시장 개발구간 · gap > 1%p) | FDR 이 KRX 와 다르게 편 자리로 보인다(권리락 계수 등). 후보군 0행 · chain 119행도 | 다음 실측 |
| ~~품질 플래그가 반출본에 없다~~ | **닫힘** (v4.0) | 4칸을 실었다 (#168 · PR #180) · 단 **아직 배포 전** | ✅ |
| 🆕 주권종류·증권그룹·소속부가 반출본에 없다 | 3칸 | 모델 파트가 이름 규칙 + 감사 예외 10건으로 재구성 · [§7.2](#72-공급-층의-판정은-반출본-칸으로-내보낸다) | 다음 판 |
| 🆕 정리매매·거래정지·신규상장이 큰 벌에 남는다 | **3.063%** (241,608행) | 작은 벌은 걸러진 표본인데 큰 벌은 아니다 — 카드는 큰 벌을 "최종 학습용" 이라 부른다 | 다음 판 |
| 🆕 현금배당을 안 편다 | 배당락일 **−0.455%p** | 우리 수익률은 CRSP `RETX` 쪽 · 중립대 ±2% 를 밀 수 있다 · 포털 71,674행·72콜로 받을 수 있다 | 팀 합의 필요 |
| 🆕 원장에 유효성(Validity) 축이 없다 | 위반 **124행** | `open ≤ 0` 인데 고가·저가는 살아 있다 · 표준 6차원 중 하나 | 다음 판 |
| 🆕 거래량 급변 검사가 없다 | — | qlib `large_step_threshold_volume=3` · **기준은 우리가 정한다**(3배면 전체 7.953%가 붉다) | 다음 판 |
| 🆕 이상치 집중 | 평균의 **96.1%가 한 행** | 008080 · 2013-09-11 · 6,699,900% · 카드 경고는 달았고 **처리 기준은 문서에 없다** | 다음 판 |
| 🆕 `adj_close` 09-02 ~ 09-04 사흘 | 8,294행 (0.09% · 전부 홀드아웃) | 채우려면 FDR 을 다시 돌려야 하고 그러면 비슷한 규모가 `chain` 으로 내려앉는다. 홀드아웃 열기 전 한 번 `--with-adj` | 의도적 보류 |
| 텍스트 신호 `report_nm` | 피처로 쓰면 시점이 샌다 | 카드·대장·명세서에 🔴 금지 권고 — 코드로 막지는 않았다 (피처 결합은 신장환 파트) | 권고로 둠 |
| ~~중기·장기 피처~~ | **닫힘** (신장환 · PR #116) | `five_day_return` · `monthly_return` | ✅ |
| ~~업종 스냅샷 KOSDAQ~~ | **닫힘** (v3.8 · 18장) | 한 종목이 업종 둘에 실리는 17쌍은 결정적 규칙 + `industry_ambiguous` | ✅ |
| `ta` 라이브러리 | 미설치 | 벤치마킹이 "정답지로 쓴다"고 정했으나 안 깔렸다 | 검토 |

---

## 9. 참고

**수업 자료**
- `learning/09-finance-ml-dl/1.금융머신러닝.ipynb` — 편향 3종 · 시계열 4성질 · 전처리 기법
- `learning/02-preprocessing/4. 판다스_데이터전처리.ipynb` — 결측·중복·표준화·정규화

**외부**
- MSCI Quality Index Methodology — 윈저화 5/95
- Barra USE4 Methodology Notes (2011) — 3σ 절단을 자료 오류 제거에
- Lopez de Prado, *Advances in Financial Machine Learning*
- scipy `stats.mstats.winsorize` · zipline `pipeline.factors`
- FinanceDataReader Issue #21 — "모든 가격이 수정주가" (우리 실측과 다름)
- 녹색경제신문 2026-08-27 — 액면병합 276건 · 병합 후 83% 하락

**우리 코드**
- `scripts/verify_base_info.py` — 9절이 자본변동 연속성을 본다
- `common/corporate_actions.py` — 원가격 극단 2,080행을 넷으로 가른 분류기
- `features/indicators.py` — RSI 결측을 `nan` 으로 전파 (PR #81 · 신장환)
